# github-profile-analyzer

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/core/: cache.py  exceptions.py  logging_config.py  middleware.py
app/services/: ai_service.py  analyze_service.py  github_service.py  scoring_service.py  stats_service.py
