[project]
name = "github-profile-analyzer"
version = "0.1.0"
description = "Scores a GitHub profile and generates recruiter-facing improvement tips."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic-settings>=2.4",
    "cachetools>=5.4",
    "tenacity>=8.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = true
